Added option to skip field analysis in pipeline
Former-commit-id: 2636720959c9142392e41497e78774a3dcd48891

--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -19,8 +19,8 @@
     "exp_mean_min = 800\n",
     "nr_vis_min = 10 #  >=\n",
     "surveys =  [\"MIS\",\"DIS\"] # \"AIS\",,\"CAI\" ,\"NGS\", ,\"GII\"\n",
-    "fout_name = \"none\"\n",
-    "fout_name = \"./resources/GALEX_field_id_lists/field_ids_\"+''.join(surveys)+\"_exp\"+str(exp_mean_min)+\"_vis\"+str(nr_vis_min)+\".yaml\"  # No file written for \"none\""
+    "fout_name_base = \"none\"\n",
+    "fout_name_base = \"./resources/GALEX_field_id_lists/field_ids_\"+''.join(surveys)+\"_exp\"+str(exp_mean_min)+\"_vis\"+str(nr_vis_min)  # No file written for \"none\""
    ]
   },
   {
@@ -59,7 +59,7 @@
      "data": {
       "text/html": [
        "<div><i>Table masked=True length=2</i>\n",
-       "<table id=\"table139723966300608\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140637902617760\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>str7</th><th>str5</th><th>str3</th><th>str5</th><th>str3</th><th>str3</th><th>str2</th><th>str16</th><th>str1</th><th>str19</th><th>float64</th><th>float64</th><th>str5</th><th>str1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>str1</th><th>str3</th><th>int64</th><th>str43</th><th>str130</th><th>str124</th><th>str6</th><th>bool</th><th>float64</th><th>str4</th><th>str4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -111,7 +111,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table139722952324576\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140636885448304\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -134,7 +134,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table139722952326880\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140636885449360\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>bytes3</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bytes6</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes5</th><th>bytes4</th><th>bytes4</th><th>bytes4</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes22</th><th>bytes4</th><th>bytes4</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>35.5606252902383</td><td>-3.14743664508478</td><td>DIS</td><td>1345.25</td><td>0.0</td><td>2592597841327161344</td><td>2592597978464124928</td><td>63341</td><td>8150</td><td>-999</td><td>visitI</td><td>9832</td><td>1</td><td>12/18/2009 9:09:30 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>16</td><td>-999</td><td>12/18/2009 9:09:30 AM</td><td>12/18/2009 9:31:55 AM</td><td>null</td><td>null</td><td>55183.38159722222</td><td>169.00600771825543</td><td>-57.654641102907654</td></tr>\n",
@@ -218,7 +218,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table139722952644624\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140636885746928\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2509140647668088832</td><td>329.72453844982545</td><td>-30.26688502959948</td><td>1112.4810344827586</td><td>1112.3775862068965</td><td>17.66461630795234</td><td>-52.25688418344318</td><td>32261.949999999997</td><td>32258.949999999997</td><td>29</td><td>DIS</td><td>8/5/2008 1:19:14 PM</td><td>8/5/2008 1:47:28 PM</td></tr>\n",
@@ -243,7 +243,7 @@
      "text": [
       "Selected number of fields: 221 ( 5.26 times TDS )\n",
       "Selected number of visits: 6813 ( 5.67 times TDS )\n",
-      "Total selected exposure  : 8.53 Ms ( 5.27 times TDS )\n",
+      "Total selected NUV exposure  : 8.53 Ms ( 5.27 times TDS ), FUV exposure is 4.24 Ms \n",
       "\n",
       "MIS : Visits = 38 ,exposure = 34578 s ,exposure per visit = 909.9657894736841 s\n",
       "DIS : Visits = 6775 ,exposure = 8493023 s ,exposure per visit = 1253.5828413284132 s\n"
@@ -261,12 +261,13 @@
     "sel_fd = sel_fd_nexptime*sel_fd_nPhotoVisits*sel_sur\n",
     "display(tt_fd[sel_fd][0:2])\n",
     "\n",
-    "#Print out besic info\n",
-    "sel_fd_area = sel_fd.sum() * 3.1415*(GALEX_FOV_DIAM/2.)**2\n",
-    "sel_fd_exp = (tt_fd[sel_fd][\"nPhotoVisits\"]*tt_fd[sel_fd][\"nexptime_mean\"]).sum()\n",
+    "#Print out basic info\n",
+    "#sel_fd_area = sel_fd.sum() * 3.1415*(GALEX_FOV_DIAM/2.)**2\n",
+    "fd_nuv_exp = (tt_fd[sel_fd][\"nPhotoVisits\"]*tt_fd[sel_fd][\"nexptime_mean\"]).sum()\n",
+    "fd_fuv_exp = (tt_fd[sel_fd][\"nPhotoVisits\"]*tt_fd[sel_fd][\"fexptime_mean\"]).sum()\n",
     "print(f\"Selected number of fields: {sel_fd.sum()} ( {round(sel_fd.sum()/tds_nr_flds,2)} times TDS )\")\n",
     "print(f\"Selected number of visits: {tt_fd[sel_fd]['nPhotoVisits'].sum()} ( {round(tt_fd[sel_fd]['nPhotoVisits'].sum()/tds_nr_vis,2)} times TDS )\")\n",
-    "print(f\"Total selected exposure  : {round(sel_fd_exp/1e6,2)} Ms ( {round(sel_fd_exp/tds_exp,2)} times TDS )\\n\")\n",
+    "print(f\"Total selected NUV exposure  : {round(fd_nuv_exp/1e6,2)} Ms ( {round(fd_nuv_exp/tds_exp,2)} times TDS ), FUV exposure is {round(fd_fuv_exp/1e6,2)} Ms \\n\")\n",
     "#display(tt_fd[sel_fd])\n",
     "\n",
     "#Show exposure for different surveys\n",
@@ -294,18 +295,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if fout_name != \"none\":\n",
-    "    ff = open(fout_name, \"w\")\n",
+    "if fout_name_base != \"none\":\n",
+    "    ff_nuv = open(fout_name_base+\"_nuv.yaml\", \"w\")\n",
+    "    ff_fuv = open(fout_name_base+\"_fuv.yaml\", \"w\")\n",
     "    ll_cols = ['RATileCenter', 'DECTileCenter', 'nexptime_sum', 'fexptime_sum', 'nPhotoVisits', 'survey']\n",
     "    wstr = \"#\"\n",
     "    for col in ll_cols: wstr += \" \" + str(col) \n",
-    "    ff.write(wstr+\"\\n\")\n",
+    "    ff_nuv.write(wstr+\"\\n\")\n",
+    "    ff_fuv.write(wstr+\"\\n\")\n",
     "    for row in tt_fd[sel_fd]:\n",
-    "        ff.write('- '+ str(row[\"ParentImgRunID\"]))\n",
-    "        wstr = \" #\"\n",
+    "        wstr = '- '+ str(row[\"ParentImgRunID\"]) + \" #\"\n",
     "        for col in ll_cols:  wstr += \" \" + str(row[col])\n",
-    "        ff.write(wstr+\"\\n\")\n",
-    "    ff.close()"
+    "        if row[\"nexptime_sum\"]>0:\n",
+    "            ff_nuv.write(wstr+\"\\n\")\n",
+    "        if row[\"fexptime_sum\"]>0:\n",
+    "            ff_fuv.write(wstr+\"\\n\")\n",
+    "    ff_nuv.close()\n",
+    "    ff_fuv.close()"
    ]
   },
   {
@@ -335,7 +341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3a2ea644e724ee1ae4d7a5ced35e5ff",
+       "model_id": "8e4474c2e9254d52b67a393d618640a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,7 +402,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72a1d940583447eb8bc5eabef639f0dd",
+       "model_id": "c05261a0520d470d8a97c6d826b622c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f0055a08ba249f58f22f7ee19de5f7d",
+       "model_id": "e911397bbc3e4a8685ad69de5ec38f04",
        "version_major": 2,
        "version_minor": 0
       },
