Improved robustness to empty tables
Former-commit-id: c86fa71f923a744fb3a270a14c24bad57b6fa13d

--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -59,7 +59,7 @@
      "data": {
       "text/html": [
        "<div><i>Table masked=True length=2</i>\n",
-       "<table id=\"table140637902617760\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140266532788816\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>str7</th><th>str5</th><th>str3</th><th>str5</th><th>str3</th><th>str3</th><th>str2</th><th>str16</th><th>str1</th><th>str19</th><th>float64</th><th>float64</th><th>str5</th><th>str1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>str1</th><th>str3</th><th>int64</th><th>str43</th><th>str130</th><th>str124</th><th>str6</th><th>bool</th><th>float64</th><th>str4</th><th>str4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -111,7 +111,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140636885448304\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140267549846176\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -134,7 +134,30 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140636885449360\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140267549849584\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
+       "<tr><td>2524023637061664768</td><td>79.43887500979285</td><td>-48.9902860515395</td><td>1023.2025</td><td>0.0</td><td>255.4788616788798</td><td>-35.18449371012288</td><td>20464.05</td><td>0.0</td><td>20</td><td>DIS</td><td>2/1/2004 5:20:37 AM</td><td>2/1/2004 5:37:41 AM</td></tr>\n",
+       "<tr><td>2529406845991256064</td><td>241.95064763025468</td><td>55.63918751045922</td><td>1193.9305555555557</td><td>0.0</td><td>85.93692238839579</td><td>44.85837997346475</td><td>21490.75</td><td>0.0</td><td>18</td><td>DIS</td><td>7/6/2004 1:17:58 AM</td><td>7/6/2004 1:21:21 AM</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=2>\n",
+       "   ParentImgRunID      RATileCenter    ...   maxPhotoObsDate  \n",
+       "       int64             float64       ...       bytes22      \n",
+       "------------------- ------------------ ... -------------------\n",
+       "2524023637061664768  79.43887500979285 ... 2/1/2004 5:37:41 AM\n",
+       "2529406845991256064 241.95064763025468 ... 7/6/2004 1:21:21 AM"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><i>Table length=2</i>\n",
+       "<table id=\"table140267549846608\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>bytes3</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bytes6</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes5</th><th>bytes4</th><th>bytes4</th><th>bytes4</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes22</th><th>bytes4</th><th>bytes4</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>35.5606252902383</td><td>-3.14743664508478</td><td>DIS</td><td>1345.25</td><td>0.0</td><td>2592597841327161344</td><td>2592597978464124928</td><td>63341</td><td>8150</td><td>-999</td><td>visitI</td><td>9832</td><td>1</td><td>12/18/2009 9:09:30 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>16</td><td>-999</td><td>12/18/2009 9:09:30 AM</td><td>12/18/2009 9:31:55 AM</td><td>null</td><td>null</td><td>55183.38159722222</td><td>169.00600771825543</td><td>-57.654641102907654</td></tr>\n",
@@ -182,6 +205,14 @@
     "tt_fd = join(tt_fd, tt_vis_uni_grp['ParentImgRunID',\"survey\",\"minPhotoObsDate\",\"maxPhotoObsDate\"], keys='ParentImgRunID')\n",
     "display(tt_fd[:2])\n",
     "\n",
+    "# For the fields listed below there is no FUV detections in MAST with s2n>0. The effective exposure of these zero, setting fexptime_mean to zero\n",
+    "ll_fuv_nodet = [2524023637061664768 ,2529406845991256064 ,2529477214735433728 ,2529547583479611392 ,2529617952223789056 ,2529758689712144384 , 2529899427401826304 ,2529969795944677376, 2530040164688855040 , 2530110533433032704 , 2530180902177210368 , 2531447539572408320 , 2531517908316585984 , 2531588277060763648 ,2531658645804941312 , 2538484413990174720 , 2538625151478530048 , 2538695520222707712 , 2538906626455240704 , 2540138079478349824 , 2540208448222527488 , 2540278816966705152 ,2540349185912209408 , 2540489923199238144 , 2540560291943415808 , 2540771398175948800 , 2540841766920126464 , 2540982504408481792 ,2549602675570245632]\n",
+    "tt_fd.add_index('ParentImgRunID')\n",
+    "idx_fuv_nodet = tt_fd.loc_indices[np.array(ll_fuv_nodet,dtype=np.int64)]\n",
+    "tt_fd[\"fexptime_mean\"][idx_fuv_nodet]=0.0\n",
+    "tt_fd[\"fexptime_sum\"][idx_fuv_nodet]=0.0\n",
+    "display(tt_fd[idx_fuv_nodet][0:2])\n",
+    "\n",
     "tt_vis.add_index('ParentImgRunID')\n",
     "tds_idx = tt_vis.loc_indices[np.array(tt_obs[\"obs_id\"],dtype=np.int64)]\n",
     "display(tt_vis[tds_idx ][0:2])\n",
@@ -218,7 +249,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140636885746928\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140266532794720\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2509140647668088832</td><td>329.72453844982545</td><td>-30.26688502959948</td><td>1112.4810344827586</td><td>1112.3775862068965</td><td>17.66461630795234</td><td>-52.25688418344318</td><td>32261.949999999997</td><td>32258.949999999997</td><td>29</td><td>DIS</td><td>8/5/2008 1:19:14 PM</td><td>8/5/2008 1:47:28 PM</td></tr>\n",
@@ -243,7 +274,7 @@
      "text": [
       "Selected number of fields: 221 ( 5.26 times TDS )\n",
       "Selected number of visits: 6813 ( 5.67 times TDS )\n",
-      "Total selected NUV exposure  : 8.53 Ms ( 5.27 times TDS ), FUV exposure is 4.24 Ms \n",
+      "Total selected NUV exposure  : 8.53 Ms ( 5.27 times TDS ), FUV exposure is 4.05 Ms \n",
       "\n",
       "MIS : Visits = 38 ,exposure = 34578 s ,exposure per visit = 909.9657894736841 s\n",
       "DIS : Visits = 6775 ,exposure = 8493023 s ,exposure per visit = 1253.5828413284132 s\n"
@@ -306,9 +337,9 @@
     "    for row in tt_fd[sel_fd]:\n",
     "        wstr = '- '+ str(row[\"ParentImgRunID\"]) + \" #\"\n",
     "        for col in ll_cols:  wstr += \" \" + str(row[col])\n",
-    "        if row[\"nexptime_sum\"]>0:\n",
+    "        if row[\"nexptime_sum\"]>1e-9:\n",
     "            ff_nuv.write(wstr+\"\\n\")\n",
-    "        if row[\"fexptime_sum\"]>0:\n",
+    "        if row[\"fexptime_sum\"]>1e-9:\n",
     "            ff_fuv.write(wstr+\"\\n\")\n",
     "    ff_nuv.close()\n",
     "    ff_fuv.close()"
@@ -341,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e4474c2e9254d52b67a393d618640a2",
+       "model_id": "6d115dd133214154b79fe0bdf3f0b33c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c05261a0520d470d8a97c6d826b622c8",
+       "model_id": "01775f543913412cabf7d567544f96da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e911397bbc3e4a8685ad69de5ec38f04",
+       "model_id": "25858cedd84f496fb982ec00e5e97653",
        "version_major": 2,
        "version_minor": 0
       },
