--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -137,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fb6117298f047daaa2967002179842f",
+       "model_id": "4e11e2415c06443d87c810e10605acc2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +157,7 @@
     "    fd = rg.get_field(field_id=dd_art[\"field_id\"], load_method=\"FITS\", add_field=True)\n",
     "    \n",
     "    # Prepare figute and sky region\n",
-    "    fig_art = plt.figure(\"Sky map artifact\",figsize=(8, 7))\n",
+    "    fig_art = plt.figure(\"Sky map artifact\",figsize=(8, 7), clear=True)\n",
     "    sky_center = SkyCoord(dd_art[\"ra\"]*uu.deg, dd_art[\"dec\"]*uu.deg, frame=\"icrs\")\n",
     "    sky_art= CircleSkyRegion(center=sky_center, radius=dd_art[\"rad\"]*uu.deg)\n",
     "    plt.cla()\n",
