--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -59,7 +59,7 @@
      "data": {
       "text/html": [
        "<div><i>Table masked=True length=2</i>\n",
-       "<table id=\"table140266532788816\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140335960675120\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>str7</th><th>str5</th><th>str3</th><th>str5</th><th>str3</th><th>str3</th><th>str2</th><th>str16</th><th>str1</th><th>str19</th><th>float64</th><th>float64</th><th>str5</th><th>str1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>str1</th><th>str3</th><th>int64</th><th>str43</th><th>str130</th><th>str124</th><th>str6</th><th>bool</th><th>float64</th><th>str4</th><th>str4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -111,7 +111,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140267549846176\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140336974674240\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -134,7 +134,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140267549849584\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140336974673712\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2524023637061664768</td><td>79.43887500979285</td><td>-48.9902860515395</td><td>1023.2025</td><td>0.0</td><td>255.4788616788798</td><td>-35.18449371012288</td><td>20464.05</td><td>0.0</td><td>20</td><td>DIS</td><td>2/1/2004 5:20:37 AM</td><td>2/1/2004 5:37:41 AM</td></tr>\n",
@@ -157,7 +157,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140267549846608\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140336974673184\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>bytes3</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bytes6</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes5</th><th>bytes4</th><th>bytes4</th><th>bytes4</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes22</th><th>bytes4</th><th>bytes4</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>35.5606252902383</td><td>-3.14743664508478</td><td>DIS</td><td>1345.25</td><td>0.0</td><td>2592597841327161344</td><td>2592597978464124928</td><td>63341</td><td>8150</td><td>-999</td><td>visitI</td><td>9832</td><td>1</td><td>12/18/2009 9:09:30 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>16</td><td>-999</td><td>12/18/2009 9:09:30 AM</td><td>12/18/2009 9:31:55 AM</td><td>null</td><td>null</td><td>55183.38159722222</td><td>169.00600771825543</td><td>-57.654641102907654</td></tr>\n",
@@ -236,7 +236,9 @@
    "id": "fef6dded-db36-493c-bcac-e5ce446e8904",
    "metadata": {},
    "source": [
-    "### Define field selections and compare available data-set to TDS "
+    "### Define field selections and compare available data-set to TDS \n",
+    "ULTRASAT sensitity is 22.4 ABmag at 5 sigma in 900s over 170 deg2\n",
+    "GALEX NUV sensitivity in 1500s is 22.7 ABmag https://ui.adsabs.harvard.edu/abs/2005ApJ...619L...7M/abstract"
    ]
   },
   {
@@ -249,7 +251,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140266532794720\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140335960684624\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2509140647668088832</td><td>329.72453844982545</td><td>-30.26688502959948</td><td>1112.4810344827586</td><td>1112.3775862068965</td><td>17.66461630795234</td><td>-52.25688418344318</td><td>32261.949999999997</td><td>32258.949999999997</td><td>29</td><td>DIS</td><td>8/5/2008 1:19:14 PM</td><td>8/5/2008 1:47:28 PM</td></tr>\n",
@@ -272,9 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected number of fields: 221 ( 5.26 times TDS )\n",
-      "Selected number of visits: 6813 ( 5.67 times TDS )\n",
-      "Total selected NUV exposure  : 8.53 Ms ( 5.27 times TDS ), FUV exposure is 4.05 Ms \n",
+      "Selected number of fields: 221 ( 5.26 times TDS, ~173.5734 deg2)\n",
+      "Selected number of visits: 6813 ( 5.67 times TDS, 30.83 per field)\n",
+      "Total selected NUV exposure  : 8.53 Ms ( 1251.67 s average, 5.27 times TDS ), FUV exposure is 4.05 Ms \n",
       "\n",
       "MIS : Visits = 38 ,exposure = 34578 s ,exposure per visit = 909.9657894736841 s\n",
       "DIS : Visits = 6775 ,exposure = 8493023 s ,exposure per visit = 1253.5828413284132 s\n"
@@ -296,9 +298,10 @@
     "#sel_fd_area = sel_fd.sum() * 3.1415*(GALEX_FOV_DIAM/2.)**2\n",
     "fd_nuv_exp = (tt_fd[sel_fd][\"nPhotoVisits\"]*tt_fd[sel_fd][\"nexptime_mean\"]).sum()\n",
     "fd_fuv_exp = (tt_fd[sel_fd][\"nPhotoVisits\"]*tt_fd[sel_fd][\"fexptime_mean\"]).sum()\n",
-    "print(f\"Selected number of fields: {sel_fd.sum()} ( {round(sel_fd.sum()/tds_nr_flds,2)} times TDS )\")\n",
-    "print(f\"Selected number of visits: {tt_fd[sel_fd]['nPhotoVisits'].sum()} ( {round(tt_fd[sel_fd]['nPhotoVisits'].sum()/tds_nr_vis,2)} times TDS )\")\n",
-    "print(f\"Total selected NUV exposure  : {round(fd_nuv_exp/1e6,2)} Ms ( {round(fd_nuv_exp/tds_exp,2)} times TDS ), FUV exposure is {round(fd_fuv_exp/1e6,2)} Ms \\n\")\n",
+    "fov_area = 3.1416*(GALEX_FOV_DIAM/2)**2 \n",
+    "print(f\"Selected number of fields: {sel_fd.sum()} ( {round(sel_fd.sum()/tds_nr_flds,2)} times TDS, ~{sel_fd.sum()*fov_area} deg2)\")\n",
+    "print(f\"Selected number of visits: {tt_fd[sel_fd]['nPhotoVisits'].sum()} ( {round(tt_fd[sel_fd]['nPhotoVisits'].sum()/tds_nr_vis,2)} times TDS, {round(tt_fd[sel_fd]['nPhotoVisits'].sum()/sel_fd.sum(),2)} per field)\")\n",
+    "print(f\"Total selected NUV exposure  : {round(fd_nuv_exp/1e6,2)} Ms ( {round(fd_nuv_exp/tt_fd[sel_fd]['nPhotoVisits'].sum(),2)} s average, {round(fd_nuv_exp/tds_exp,2)} times TDS ), FUV exposure is {round(fd_fuv_exp/1e6,2)} Ms \\n\")\n",
     "#display(tt_fd[sel_fd])\n",
     "\n",
     "#Show exposure for different surveys\n",
@@ -310,18 +313,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2d90b529-0e9d-4704-ae9d-0700bd76cb05",
+   "cell_type": "markdown",
+   "id": "453a2009-81f6-4554-8ce2-81394b37071e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Write out field_id file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a49c6a07-8835-4ddf-8ee9-1f9c3ca07fa2",
    "metadata": {},
    "outputs": [],
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fe1c16f5-bcdd-4d66-b44d-0570dee41150",
    "metadata": {},
    "outputs": [
@@ -365,14 +366,14 @@
        "Text(0.5, 0, 'Mean exposure time[s]')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d115dd133214154b79fe0bdf3f0b33c",
+       "model_id": "bc7e0920af13449c8ecd851f5136b18c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -410,6 +411,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31bf9c67-2098-4695-a660-ed520d7e485e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "84e64420-a874-419c-8904-4ed76050c0e8",
    "metadata": {},
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6c65650c-fa84-4e13-8c27-21257342cb18",
    "metadata": {},
    "outputs": [
@@ -433,7 +442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01775f543913412cabf7d567544f96da",
+       "model_id": "c001e49196c941839e8a3011d918b199",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25858cedd84f496fb982ec00e5e97653",
+       "model_id": "65219c7f345042bbaaaae5ea2b66f468",
        "version_major": 2,
        "version_minor": 0
       },
